--- a/tools/timeline.html
+++ b/tools/timeline.html
@@ -24,7 +24,7 @@
                 <div class="row mb-4">
                     <div class="col-12 text-center">
                         <h1 class="display-5 fw-bold">Application Timeline Planner</h1>
-                        <p class="lead text-muted">Create and manage your study abroad application timeline</p>
+                        <p class="lead text-muted">Create and manage your international education application timeline</p>
                     </div>
                 </div>
 
