--- a/analytics.html
+++ b/analytics.html
@@ -71,7 +71,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <h1>Advanced Analytics</h1>
-                            <p class="lead">Deep insights into your study abroad decisions</p>
+                            <p class="lead">Deep insights into your international education decisions</p>
                         </div>
                         <div class="col-md-6 text-md-end">
                             <div class="d-flex justify-content-md-end align-items-center">
