--- a/tools/calculator.html
+++ b/tools/calculator.html
@@ -23,8 +23,8 @@
             <div class="container-fluid py-4">
                 <div class="row mb-4">
                     <div class="col-12 text-center">
-                        <h1 class="display-5 fw-bold">Study Abroad Cost Calculator</h1>
-                        <p class="lead text-muted">Estimate and compare your total study abroad costs</p>
+                        <h1 class="display-5 fw-bold">International Education Cost Calculator</h1>
+                        <p class="lead text-muted">Estimate and compare your total education abroad costs</p>
                     </div>
                 </div>
 
