--- a/results.html
+++ b/results.html
@@ -485,10 +485,10 @@
                     });
                 }
             }
-
-            // View switching functionality
-            document.querySelectorAll('.view-btn').forEach(button => {
-                button.addEventListener('click', function() {
+        });
+    </script>
+</body>
+</html>
                     // Update active button
                     document.querySelectorAll('.view-btn').forEach(btn => {
                         btn.classList.remove('active');
