--- a/login.html
+++ b/login.html
@@ -64,8 +64,10 @@
                         </form>
                         
                         <div class="text-center mt-4">
-                            <p class="text-muted">Use username and password "admin" for admin access.</p>
-                            <p><a href="index.html">Return to home</a></p>
+                            <p class="text-muted">Available credentials:</p>
+                            <p class="text-muted"><strong>Admin:</strong> username="admin", password="admin"</p>
+                            <p class="text-muted"><strong>Guest:</strong> username="guest", password="guest"</p>
+                            <p><a href="index.html" class="btn btn-outline-primary">Return to Home Page</a></p>
                         </div>
                     </div>
                 </div>
